--- a/modules/fooof_module/main.Rmd
+++ b/modules/fooof_module/main.Rmd
@@ -88,6 +88,7 @@ subset_analyzed = r.subset_analyzed
 sample_rate = r.sample_rate
 window_length = r.window_length
 freq_range = r.freq_range
+max_n_peaks = r.max_n_peaks
 ```
 
 
@@ -111,13 +112,15 @@ shared.plot_trials(power_outputs, individual_trials=individual_trials)
 ```
 
 
-```{python fit_fooof_on_average, use_rave = FALSE, deps = "power_outputs"}
+
+
+```{python fit_fooof_on_average, use_rave = FALSE, deps = c("power_outputs", "freq_range", "max_n_peaks")}
 filtered_frequency = power_outputs['filtered_frequency']
 average_power = power_outputs['Average Power']
 title = None
-freq_range = [1,300]
-max_n_peaks = 10000
-aperiodic_mode = "fixed"
+freq_range = freq_range
+max_n_peaks = max_n_peaks
+aperiodic_mode = 'fixed'
 plt_log = False
 shared.fit_fooof(filtered_frequency, average_power, title=title, freq_range=freq_range, max_n_peaks=max_n_peaks, aperiodic_mode=aperiodic_mode, plt_log=plt_log)
 ```
