--- a/modules/fooof_module/main.Rmd
+++ b/modules/fooof_module/main.Rmd
@@ -89,6 +89,7 @@ sample_rate = r.sample_rate
 window_length = r.window_length
 freq_range = r.freq_range
 max_n_peaks = r.max_n_peaks
+aperiodic_mode = r.aperiodic_mode
 ```
 
 
@@ -114,15 +115,20 @@ shared.plot_trials(power_outputs, individual_trials=individual_trials)
 
 
 
-```{python fit_fooof_on_average, use_rave = FALSE, deps = c("power_outputs", "freq_range", "max_n_peaks")}
+```{python fit_fooof_on_average, use_rave = TRUE, deps = c("power_outputs", "max_n_peaks", "aperiodic_mode", "freq_range"), export = "fitted_fooof", cue = "always"}
 filtered_frequency = power_outputs['filtered_frequency']
 average_power = power_outputs['Average Power']
-title = None
-freq_range = freq_range
-max_n_peaks = max_n_peaks
-aperiodic_mode = 'fixed'
-plt_log = False
-shared.fit_fooof(filtered_frequency, average_power, title=title, freq_range=freq_range, max_n_peaks=max_n_peaks, aperiodic_mode=aperiodic_mode, plt_log=plt_log)
+# title = None
+# freq_range = freq_range
+# plt_log = False
+# aperiodic_mode = 'fixed'
+fitted_fooof = shared.fit_fooof(
+  filtered_freqs = filtered_frequency, 
+  filtered_powers = average_power, 
+  freq_range = freq_range,
+  max_n_peaks=max_n_peaks, 
+  aperiodic_mode=aperiodic_mode
+)
 ```
 
 
